More sts14 article material.

--- a/txt/sts14/intro.tex
+++ b/txt/sts14/intro.tex
@@ -13,8 +13,13 @@
     \url{http://creativecommons.org/licenses/by/4.0/}
 }
 
-This paper describes the NTNU submission to the SemEval 2014 Semantic Textual Similarity (STS) shared task. It is based on the earlier NTNU 2013 submission, which again is based on the baseline Takelab system from the 2012 shared task. The 2014 system improves on it's predecessor in three aspects. It adds two new categories of features and it uses a bagging regression model to predict similarity scores. The shared task results indicates that these improvements gives a substantial boost to the system performance.
+This paper describes the NTNU submission to the SemEval 2014 Semantic Textual Similarity (STS) shared task. It is based on  the baseline Takelab system from the 2012 shared task and improving it in three aspects. It adds two new categories of features and uses a bagging regression model to predict similarity scores. The shared task evaluation indicates that these improvements gives a improvement to the baseline system performance.
 
 % something about Parthas features
+Based on earlier results in this task we have added features based on soft cardinality and character n-grams. Soft cardinality similarity measures has shown themselves to be strong features in earlier submissions \cite{jimenez_softcardinality-core:_2013} and the NTNU system uses an ensemble of 18 such measures using different similarity functions.
+We have also incorperated semantic similarity metrics based on character n-gram feature representations. These representations replace character n-gram features with clusters or vectors based on the n-gram collocational structure learned in an unsupervised manner from text data. Three different techniques are used to induce such representations: Brown clustering \cite{brown1992class}, log linear skip-gram representations \cite{mikolov2013efficient} and Latent Semantic Indexing (LSI) topic vectors \cite{deerwester1990indexing}. We trained a variety of such feature representations on subsets of Wikipedia and used the best performing ones in our new similarity measures, which is a simple cosine similarity between the document vectors derived from each sentence of the given pair.
 
-Based on our impression that character n-gram features has been a strong driver of system performance in many of the systems submitted to the 2013 shared task, we have incorperated semantic similarity metrics basedon character n-gram feature representations. These representations replace character n-gram features with clusters or vectors based on the n-gram collocational structure learned in an unsupervised manner from text data. Three different techniques are used to induce such representations: Brown clustering \cite{brown1992class}, log linear skip-gram representations \cite{mikolov2013efficient} and Latent Semantic Indexing (LSI) topic vectors \cite{deerwester1990indexing}. We trained a variety of such feature representations on subsets of Wikipedia and used the best performing ones in our new similarity measures, which is a simple cosine similarity between the document vectors derived from each sentence of the given pair.
+%%% Local Variables:  
+%%% mode: latex 
+%%% TeX-master: "sts14-ntnu" 
+%%% End: 
