--- a/txt/sts14/sts14-ntnu.tex
+++ b/txt/sts14/sts14-ntnu.tex
@@ -62,10 +62,12 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-  This paper describes the system submitted by the NTNU team to the SemEval 2014 shared task 10 (Semantic Textual Similarity). It combines baseline semantic distance metrics from the 2013 submission with negation detection features and similarity measures based on character n-gram feature representations. The final system is based on bagged support vector machine (SVM) regression on earlier shared task datasets.
+  This paper describes the system submitted by the NTNU team to the SemEval 2014 shared task 10 (Semantic Textual Similarity). It combines baseline semantic distance metrics from the 2013 submission with measures based on lexical soft cardinality and character n-gram feature representations. The final system is based on bagged support vector machine (SVM) regression on earlier shared task datasets.
 \end{abstract}
 
 \input{intro}
+
+\input{softcard-measures}
 
 \input{subrep-measures}
 
