Updated STS14 text.

--- a/txt/sts14/systems.tex
+++ b/txt/sts14/systems.tex
@@ -28,6 +28,11 @@ The system composes a feature set of scores from these 20 baseline measures and 
 
 NTNU-run3 is identical to NTNU-run2, but incorporates the measures from NTNU-run1 as features. As such this system represents a combination of the new measures and methods introduced by NTNU-run1 and NTNU-run2.
 
+% from subrep
+
+The specific measures used in the submitted systems were found by by training the regression model on the STS 2012 shared task data and evaluating on the STS 2013 test data. We used a stepwise forword selection method by comparing mean (but unweighted) correlation on the four test categories in order to identify the subset of measures to include in the final models.
+
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "sts14-ntnu"
