--- a/txt/sts14/intro.tex
+++ b/txt/sts14/intro.tex
@@ -19,6 +19,8 @@ This paper describes the NTNU submission to the SemEval 2014 Semantic Textual Si
 Based on earlier results in this task we have added features based on soft cardinality and character n-grams. Soft cardinality similarity measures has shown themselves to be strong features in earlier submissions \cite{jimenez_softcardinality-core:_2013} and the NTNU system uses an ensemble of 18 such measures using different similarity functions.
 We have also incorperated semantic similarity metrics based on character n-gram feature representations. These representations replace character n-gram features with clusters or vectors based on the n-gram collocational structure learned in an unsupervised manner from text data. Three different techniques are used to induce such representations: Brown clustering \cite{brown1992class}, log linear skip-gram representations \cite{mikolov2013efficient} and Latent Semantic Indexing (LSI) topic vectors \cite{deerwester1990indexing}. We trained a variety of such feature representations on subsets of Wikipedia and used the best performing ones in our new similarity measures, which is a simple cosine similarity between the document vectors derived from each sentence of the given pair.
 
+Combined with the baseline features the features based on these new measures shows competitive performance in the final evaluation results of the shared task.
+
 %%% Local Variables:  
 %%% mode: latex 
 %%% TeX-master: "sts14-ntnu" 
