--- a/txt/sts14/results.tex
+++ b/txt/sts14/results.tex
@@ -22,7 +22,7 @@
   \label{tab:results}
 \end{table*}
 
-The final evaluation results for the three submitted systems are shown in table \ref{tab:results}. The systems using sublexical representation based measures show competitive performance, ranking third and fourth among the submitted systems with a weighted mean correlation of ca. $0.75$. The system based solely on negation features display more modest performance ranking at 21st. place with ca. 0.66 correlation. Out of the results one can note that for most categories the sublexical representation measures shows strong performance in NTNU-run2, with a significantly stronger result for the combied system NTNU-run3. This indicates that while the negation features are overall weaker predictors, they are complimentary to the sublexical ands lexical features of NTNU-run2. It is also indicative that this is not the case for the tweet-news category, where the text is more ``free form'' and less normative and one would expect sublexical approaches to have stronger performance.
+The final evaluation results for the three submitted systems are shown in table \ref{tab:results}. The systems using sublexical representation based measures show competitive performance, ranking third and fourth among the submitted systems with a weighted mean correlation of ca. $0.75$. The system based solely on soft cardinality features display more modest performance ranking at 21st. place with ca. 0.66 correlation. Out of the results one can note that for most categories the sublexical representation measures shows strong performance in NTNU-run2, with a significantly stronger result for the combined system NTNU-run3. This indicates that while the soft cardinality features are weaker predictors overall, they are complimentary to the sublexical ands lexical features of NTNU-run2. It is also indicative that this is not the case for the tweet-news category, where the text is more ``free form'' and less normative and one would expect sublexical approaches to have stronger performance.
 
 %%% Local Variables: 
 %%% mode: latex
