--- a/txt/sts14/systems.tex
+++ b/txt/sts14/systems.tex
@@ -2,7 +2,9 @@
 \section{Submitted systems}
 \label{sec:systems}
 
-The three submitted systems consists of one using negation measures alone (NTNU-run1), one using a baseline set of lexical measures and WordNet augmented similarity in addition to the new sublexical representation measures (NTNU-run2) and one which combines the measures of the two other systems (NTNU-run3).
+The three submitted systems consists of one using only the soft cardinality features (NTNU-run1), one using a baseline set of lexical measures and WordNet augmented similarity in addition to the new sublexical representation measures (NTNU-run2) and one which combines the measures of the two other systems (NTNU-run3).
+
+NTNU-run1 uses only the features and scoring algorithm described in section \ref{sec:softcard}.
 
 NTNU-run2 uses the following baseline features adapted from the Takelab 2012 system submission \cite{saric2012takelab}.
 
@@ -11,7 +13,7 @@ NTNU-run2 uses the following baseline features adapted from the Takelab 2012 sys
 \item Lemma and word n-gram overlap of orders 1-3.
 \item Frequency weighted lemma and word overlap.
 \item WordNet augmented overlap.
-\item Cosine similarity between the summed word representation vectors from each sentence using LSI models based on large corpora with or without frequency weighhting.
+\item Cosine similarity between the summed word representation vectors from each sentence using LSI models based on large corpora with or without frequency weighting.
 \end{itemize}
 
 In addition the systems uses the following new measures based on sublexical word representations generated as described in \ref{subrep-measures}.
@@ -20,17 +22,17 @@ In addition the systems uses the following new measures based on sublexical word
 \item Loglinear skip-gram representations of character 3- and 4-grams of size 1000 and 2000 respectively. Trained on the Wiki8 corpus using a skip gram window of size 25 and 50 and frequency cutoff of 5 .
 \item Brown clusters of character 4-grams with cluster size 1024 using a frequency cutoff of 20.
 \item Brown clusters of character 3-, 4- and 5-grams with cluster sizes of respectively 1024, 2048 and 1024. Representations are trained on the Wiki9 corpus with successively increasing frequency cutoffs of 20, 320 and 1200.
-\item LSI topic vectors based on character 4-grams of size 2000.   Trained on the Wiki8 corpus using a frequency cutodff of 5.
-\item LSI topic vectors based on character 4-grams of size 1000. Trained on the Wiki9 corpus using a frequency cutodff of 80.
+\item LSI topic vectors based on character 4-grams of size 2000.   Trained on the Wiki8 corpus using a frequency cutoff of 5.
+\item LSI topic vectors based on character 4-grams of size 1000. Trained on the Wiki9 corpus using a frequency cutoff of 80.
 \end{itemize}
-
-The system composes a feature set of scores from these 20 baseline measures and nine sublexical representation measures and trains a bagged SVM regressor as described in \ref{sec:regression} in order to predict the semantic similarity score for new sentence pairs.
-
-NTNU-run3 is identical to NTNU-run2, but incorporates the measures from NTNU-run1 as features. As such this system represents a combination of the new measures and methods introduced by NTNU-run1 and NTNU-run2.
 
 % from subrep
 
-The specific measures used in the submitted systems were found by by training the regression model on the STS 2012 shared task data and evaluating on the STS 2013 test data. We used a stepwise forword selection method by comparing mean (but unweighted) correlation on the four test categories in order to identify the subset of measures to include in the final models.
+The specific measures used in the submitted systems were found by by training the regression model on the STS 2012 shared task data and evaluating on the STS 2013 test data. We used a stepwise foreward feature selection method by comparing mean (but unweighted) correlation on the four test categories in order to identify the subset of measures to include in the final system.
+
+The system composes a feature set of similarity scores from these 20 baseline measures and the nine sublexical representation measures, and uses these to train a bagged SVM regressor as described in \ref{sec:regression} in order to predict the final semantic similarity score for new sentence pairs.
+
+NTNU-run3 is identical to NTNU-run2, but incorporates the measures from NTNU-run1 as features. As such this system represents a combination of the new measures and methods introduced by NTNU-run1 and NTNU-run2.
 
 
 %%% Local Variables: 
