--- a/txt/sts14/sts14-ntnu.bib
+++ b/txt/sts14/sts14-ntnu.bib
@@ -79,3 +79,108 @@
   year={2008},
   publisher={Cambridge University Press Cambridge}
 }
+
+@inproceedings{croce_distributional_2012,
+	title = {Distributional Compositional Semantics and Text Similarity},
+	doi = {10.1109/ICSC.2012.63},
+	abstract = {In this paper, an approach for semantic composition based on space projection operations over basic geometric lexical representations is proposed. Syntactic bi-grams are here projected in the so called Support Subspace, aimed at emphasizing the semantic features shared by the compound word. Empirical results are discussed over two tasks: a fine grained similarity estimation task over syntactically typed word pairs and the Semantic Textual Similarity ({STS)} taskas defined by {SemEval} 2012. The generalization capabilities ofthe proposed compositional operators are also investigated ina cross-linguistic scenario, i.e. over English and Italian.},
+	booktitle = {2012 {IEEE} Sixth International Conference on Semantic Computing ({ICSC)}},
+	author = {Croce, Danilo and Storch, Valerio and Annesi, P. and Basili, Roberto},
+	month = sep,
+	year = {2012},
+	keywords = {Additives, context, Correlation, distributional compositional semantics, geometric lexical representations, Humans, Natural Language Processing, semantic, semantic textual similarity, Semantics, space projection operations, {STS}, syntactic bigrams, Syntactics, text analysis, Vectors},
+	pages = {242--249}
+}
+
+@inproceedings{croce_unitor-core_2013,
+	address = {Atlanta, Georgia, {USA}},
+	title = {{UNITOR-CORE} {TYPED:} Combining Text Similarity and Semantic Filters through {SV} Regression},
+	shorttitle = {{UNITOR-CORE} {TYPED}},
+	url = {https://www.aclweb.org/anthology-new/S/S13/S13-1.pdf#page=85},
+	urldate = {2014-05-13},
+	booktitle = {Second Joint Conference on Lexical and Computational Semantics ({*SEM)}, Volume 1: Proceedings of the Main Conference and the Shared Task: {SemanticTextual} Similarity},
+	author = {Croce, Danilo and Storch, Valerio and Basili, Roberto},
+	year = {2013},
+	pages = {59}
+}
+
+@inproceedings{jimenez_soft_2012,
+	address = {Montreal, Canada},
+	title = {Soft Cardinality: A Parameterized Similarity Function for Text Comparison},
+	booktitle = {{SemEval} 2012},
+	publisher = {{ACL}},
+	author = {Jimenez, Sergio and Becerra, Claudia and Gelbukh, Alexander},
+	year = {2012}
+}
+
+@inproceedings{jimenez_soft_2012-1,
+	address = {Montreal, Canada},
+	title = {Soft Cardinality+ {ML:} Learning Adaptive Similarity Functions for Cross-lingual Textual Entailment},
+	booktitle = {{SemEval} 2012},
+	publisher = {{ACL}},
+	author = {Jimenez, Sergio and Becerra, Claudia and Gelbukh, Alexander},
+	year = {2012}
+}
+
+@inproceedings{jimenez_softcardinality:_2013,
+	address = {Atlanta, Georgia, {USA}},
+	title = {{SOFTCARDINALITY:} Hierarchical Text Overlap for Student Response Analysis},
+	booktitle = {{SemEval} 2013},
+	publisher = {{ACL}},
+	author = {Jimenez, Sergio and Becerra, Claudia and Gelbukh, Alexander},
+	month = jun,
+	year = {2013}
+}
+
+@inproceedings{jimenez_softcardinality:_2013-1,
+	address = {Atlanta, Georgia, {USA}},
+	title = {{SOFTCARDINALITY:} Learning to Identify Directional Cross-Lingual Entailment from Cardinalities and {SMT}},
+	booktitle = {{SemEval} 2013},
+	publisher = {{ACL}},
+	author = {Jimenez, Sergio and Becerra, Claudia and Gelbukh, Alexander},
+	month = jun,
+	year = {2013}
+}
+
+@inproceedings{jimenez_softcardinality-core:_2013,
+	address = {Atlanta, Georgia, {USA}},
+	title = {{SOFTCARDINALITY-CORE:} Improving Text Overlap with Distributional Measures for Semantic Textual Similarity},
+	booktitle = {{*SEM} 2013},
+	publisher = {{ACL}},
+	author = {Jimenez, Sergio and Becerra, Claudia and Gelbukh, Alexander},
+	month = jun,
+	year = {2013}
+}
+
+@incollection{chavez_text_2010,
+	address = {Berlin, Heidelberg},
+	series = {{LNCS}},
+	title = {Text Comparison Using Soft Cardinality},
+	volume = {6393},
+	isbn = {978-3-642-16320-3},
+	url = {http://www.springerlink.com/content/x1w783135m36k880/},
+	urldate = {2011-06-12},
+	booktitle = {String Processing and Information Retrieval},
+	publisher = {Springer},
+	author = {Jimenez, Sergio and Gonzalez, Fabio and Gelbukh, Alexander},
+	editor = {Chavez, Edgar and Lonardi, Stefano},
+	year = {2010},
+	pages = {297--302}
+}
+
+@article{tversky_features_1977,
+	title = {Features of similarity},
+	volume = {84},
+	issn = {0033-{295X}},
+	url = {http://www.sciencedirect.com/science/article/B6X04-4NN6W96-1/2/f7d0743abe3bbf76806b0a2ca20609ef},
+	doi = {10.1037/0033-295X.84.4.327},
+	abstract = {Questions the metric and dimensional assumptions that underlie the geometric representation of similarity on both theoretical and empirical grounds. A new set-theoretical approach to similarity is developed in which objects are represented as collections of features and similarity is described as a feature-matching process. Specifically, a set of qualitative assumptions is shown to imply the contrast model, which expresses the similarity between objects as a linear combination of the measures of their common and distinctive features. Several predictions of the contrast model are tested in studies of similarity with both semantic and perceptual stimuli. The model is used to uncover, analyze, and explain a variety of empirical phenomena such as the role of common and distinctive features, the relations between judgments of similarity and difference, the presence of asymmetric similarities, and the effects of context on judgments of similarity. The contrast model generalizes standard representations of similarity data in terms of clusters and trees. It is also used to analyze the relations of prototypicality and family resemblance. (39 ref) ({PsycINFO} Database Record (c) 2006 {APA}, all rights reserved)},
+	number = {4},
+	urldate = {2010-10-28},
+	journal = {Psychological Review},
+	author = {Tversky, Amos},
+	month = jul,
+	year = {1977},
+	keywords = {problems with metric \& dimensional assumptions in similarity analysis \& development of set-theoretic approach},
+	pages = {327--352}
+}
