--- a/txt/sts14/sts14-ntnu.tex
+++ b/txt/sts14/sts14-ntnu.tex
@@ -21,6 +21,9 @@
 \usepackage{times}
 \usepackage{url}
 \usepackage{latexsym}
+\usepackage{array}
+\usepackage{units}
+\usepackage{multirow}
 
 %\setlength\titlebox{5cm}
 
