--- a/txt/sts14/sts14-ntnu.bib
+++ b/txt/sts14/sts14-ntnu.bib
@@ -62,7 +62,7 @@
       language={English}
 }
 
-@inproceedings{jimenez_softcardinality-core:_2013,
+@inproceedings{jimenez_softcardinality_core:_2013,
 	address = {Atlanta, Georgia, {USA}},
 	title = {{SOFTCARDINALITY-CORE:} Improving Text Overlap with Distributional Measures for Semantic Textual Similarity},
 	booktitle = {{*SEM} 2013},
@@ -183,4 +183,41 @@
 	year = {1977},
 	keywords = {problems with metric \& dimensional assumptions in similarity analysis \& development of set-theoretic approach},
 	pages = {327--352}
+}
+
+@incollection{VapnikEA:97,
+  title={Support vector method for function approximation, 
+    regression estimation, and signal processing},
+  author={Vapnik, Vladimir and Golowich, Steven E. and Smola, Alex},
+  booktitle={Advances in Neural Information Processing Systems},
+  editor={Michael C. Mozer and Michael I. Jordan and Thomas Petsche},
+  pages={281-287},
+  volume = 9,
+  year=1997,
+  publisher={MIT Press},
+  address = {Cambridge, Massachusetts},
+}
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+@InProceedings{agirre-EtAl:2013:*SEM1,
+  author    = {Agirre, Eneko  and  Cer, Daniel  and  Diab, Mona  and  Gonzalez-Agirre, Aitor  and  Guo, Weiwei},
+  title     = {*SEM 2013 shared task: Semantic Textual Similarity},
+  booktitle = {Second Joint Conference on Lexical and Computational Semantics (*SEM), Volume 1: Proceedings of the Main Conference and the Shared Task: Semantic Textual Similarity},
+  month     = {June},
+  year      = 2013,
+  address   = {Atlanta, Georgia, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {32--43},
+  url       = {http://www.aclweb.org/anthology/S13-1004}
 }
