--- a/txt/sts14/sts14-ntnu.tex
+++ b/txt/sts14/sts14-ntnu.tex
@@ -37,7 +37,7 @@
 \newcommand{\filename}{semeval2014}
 \newcommand{\contact}{pnakov qf.org.qa}
 
-\title{NTNU: Measuring semantic similarity with sublexical feature representations}
+\title{NTNU: Measuring semantic similarity with sublexical feature representations and soft cardinality}
 
 \author{Andr\'{e} Lynum \\
   \\
@@ -60,12 +60,10 @@
 
 \date{}
 
-% remember to put license back in
-
 \begin{document}
 \maketitle
 \begin{abstract}
-  This paper describes the system submitted by the NTNU team to the SemEval 2014 shared task 10 (Semantic Textual Similarity). It combines baseline semantic distance metrics from the 2013 submission with measures based on lexical soft cardinality and character n-gram feature representations. The final system is based on bagged support vector machine (SVM) regression on earlier shared task datasets.
+  This paper describes the system submitted by the NTNU team to the SemEval 2014 shared task 10 (Semantic Textual Similarity). It combines baseline semantic distance metrics from the 2013 submission with measures based on lexical soft cardinality and character n-gram feature representations. The final system is based on bagged support vector machine (SVM) regression on earlier shared task datasets and shows competetive performance in the shared task evaluation.
 \end{abstract}
 
 \input{intro}
@@ -79,6 +77,8 @@
 \input{systems}
 
 \input{results}
+
+% add Takelab acknowledgement
 
 \bibliographystyle{acl}
 \bibliography{sts14-ntnu}
